# katsuba

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: maturin.yml  release.yml  rust.yml  wasm.yml
cli/: Cargo.toml
cli/src/: bcd.rs  main.rs  nav.rs  op.rs  poi.rs  progress_bar.rs  wad.rs
cli/src/op/: display.rs
cli/src/wad/: crc.rs  ctx.rs  driver.rs  inflater.rs
cli/src/wad/driver/: blocking.rs
crates/kobold-bit-buf/: Cargo.toml
crates/kobold-bit-buf/src/: lib.rs  reader.rs  utils.rs  writer.rs
crates/kobold-bit-buf/tests/: basic_reading.rs  basic_writing.rs
crates/kobold-cli/: Cargo.toml
crates/kobold-object-property/: Cargo.toml
crates/kobold-object-property/src/: hash.rs  lib.rs  serde.rs  type_list.rs  value.rs
crates/kobold-object-property/src/serde/: de.rs  object.rs  property.rs  simple_data.rs
crates/kobold-object-property/src/value/: list.rs  object.rs
crates/kobold-types/: Cargo.toml
crates/kobold-types/src/: property.rs
crates/kobold-utils/: Cargo.toml
crates/kobold-utils/src/: lib.rs
kobold/: Cargo.toml
kobold/src/: lib.rs  main.rs
kobold/src/formats/: bcd.rs  mod.rs  nav.rs  poi.rs  utils.rs  wad.rs
kobold/src/object_property/: drop.rs  mod.rs  reader.rs  serialization.rs  type_list.rs  type_tag.rs  utils.rs
kobold/src/object_property/serialization/: enum_variant.rs  macros.rs  mod.rs  object.rs  property.rs  simple_data.rs
py/: Cargo.toml  pyproject.toml  tox.ini
py/src/: lib.rs  nav.rs  object_property.rs  poi.rs  wad.rs
py/tests/: test.py
src/katsuba/: Cargo.toml
src/katsuba-bcd/: Cargo.toml
src/katsuba-bcd/src/: lib.rs
src/katsuba-bit-buf/: Cargo.toml
src/katsuba-bit-buf/src/: lib.rs  reader.rs
src/katsuba-bit-buf/tests/: basic_reading.rs  basic_writing.rs
src/katsuba-c/: Cargo.toml
src/katsuba-c/src/: lib.rs
src/katsuba-client-sig/: Cargo.toml
src/katsuba-client-sig/src/: lib.rs
src/katsuba-executor/: Cargo.toml
src/katsuba-executor/src/: executor.rs  lib.rs  memory.rs
src/katsuba-nav/: Cargo.toml
src/katsuba-nav/src/: lib.rs
src/katsuba-object-property/: Cargo.toml
src/katsuba-object-property/src/: lib.rs  serde.rs  value.rs
src/katsuba-object-property/src/serde/: de.rs  enum_variant.rs  guess.rs  object.rs  property.rs  simple_data.rs  type_tag.rs  utils.rs
src/katsuba-object-property/src/value/: drop.rs  list.rs  object.rs  strings.rs
src/katsuba-object-property/tests/: deserialize.rs
src/katsuba-object-property/tests/fixtures/: delta-encode-absent.config.json  property-mask.config.json  scoped-enum-string.config.json  strings-compact.config.json  strings-deep.config.json  types.json  types.xml  with-compression.config.json
src/katsuba-object-property/tests/fixtures/should-fail/: delta-encode-forbid-absent.config.json
src/katsuba-poi/: Cargo.toml
src/katsuba-poi/src/: lib.rs
src/katsuba-py/: Cargo.toml  README.md  pyproject.toml
src/katsuba-py/katsuba/: __init__.py  __init__.pyi  op.pyi  utils.pyi  wad.pyi
src/katsuba-py/src/: error.rs  lib.rs  op.rs  utils.rs  wad.rs
src/katsuba-py/src/op/: conversion.rs  lazy.rs  leaf_types.rs
src/katsuba-types/: Cargo.toml
src/katsuba-types/src/: lib.rs  property.rs  serde_impl.rs  string_or_int.rs
src/katsuba-types/tests/: parsing.rs
src/katsuba-types/tests/data/: types_v2.json
src/katsuba-utils/: Cargo.toml
src/katsuba-utils/src/: align.rs  binary.rs  hash.rs  hints.rs  lib.rs
src/katsuba-utils/tests/: hashing.rs
src/katsuba-wad/: Cargo.toml
src/katsuba-wad/src/: archive.rs  builder.rs  crc.rs  deflater.rs  glob.rs  inflater.rs  lib.rs  types.rs
src/katsuba-wad/tests/: archive.rs  builder.rs
src/katsuba-wad/tests/data/: Test.wad  oob.wad
src/katsuba/src/: cli.rs  cmd.rs  executor.rs  lib.rs  main.rs  utils.rs
src/katsuba/src/cli/: args.rs  helpers.rs  io.rs  processor.rs
src/katsuba/src/cmd/: bcd.rs  cs.rs  hash.rs  nav.rs  op.rs  poi.rs  wad.rs
src/katsuba/src/cmd/op/: guess.rs  utils.rs
src/katsuba/src/cmd/wad/: extract.rs
src/katsuba/src/executor/: buffer.rs  threaded.rs
src/katsuba/src/utils/: io.rs  serde.rs
src/kobold/: Cargo.toml
src/kobold-bcd/: Cargo.toml
src/kobold-bcd/src/: lib.rs
src/kobold-bit-buf/: Cargo.toml
src/kobold-bit-buf/src/: lib.rs  reader.rs  utils.rs  writer.rs
src/kobold-bit-buf/tests/: basic_reading.rs  basic_writing.rs
src/kobold-client-sig/: Cargo.toml
src/kobold-client-sig/src/: lib.rs
src/kobold-nav/: Cargo.toml
src/kobold-nav/src/: lib.rs
src/kobold-object-property/: Cargo.toml
src/kobold-object-property/src/: serde.rs
src/kobold-object-property/src/serde/: de.rs  diagnostic.rs  enum_variant.rs  guess.rs  macros.rs  object.rs  property.rs  simple_data.rs  type_tag.rs  utils.rs
src/kobold-object-property/src/value/: color.rs  drop.rs  list.rs  math.rs  object.rs  strings.rs
src/kobold-poi/: Cargo.toml
src/kobold-py/: Cargo.toml  pyproject.toml
src/kobold-py/src/: error.rs  lib.rs  op.rs  utils.rs  wad.rs
src/kobold-py/src/op/: conversion.rs  lazy.rs  leaf_types.rs
src/kobold-types/: Cargo.toml
src/kobold-utils/: Cargo.toml
src/kobold-utils/src/: align.rs  binrw_ext.rs  fs.rs  hash.rs  lib.rs
src/kobold-utils/tests/: hashing.rs
src/kobold-wad/: Cargo.toml
src/kobold-wad/src/: archive.rs  crc.rs  inflater.rs  lib.rs  types.rs
src/kobold-wad/tests/: archive.rs
src/kobold/src/: bcd.rs  cli.rs  cmd.rs  cs.rs  executor.rs  fs.rs  hash.rs  main.rs  nav.rs  op.rs  poi.rs  utils.rs  wad.rs
src/kobold/src/cli/: args.rs  helpers.rs  io.rs  processor.rs
src/kobold/src/cmd/: bcd.rs  cs.rs  hash.rs  nav.rs  op.rs  poi.rs  wad.rs
src/kobold/src/cmd/op/: guess.rs  utils.rs
src/kobold/src/cmd/wad/: extract.rs
src/kobold/src/executor/: buffer.rs  current.rs  threaded.rs
src/kobold/src/op/: de.rs  display.rs  format.rs  guess.rs  utils.rs
src/kobold/src/utils/: serde.rs
src/kobold/src/wad/: extract.rs
wasm/: package-lock.json  package.json
wasm/lib/: Cargo.toml
wasm/lib/src/: lib.rs
wasm/www/: index.js  package-lock.json  package.json  webpack.config.js
(+11 files in other folders)
