[workspace]
members = ["src/*"]
resolver = "2"

[workspace.dependencies]
binrw = "0.14"
bitflags = "2.9"
byteorder = "1.5"
libdeflater = { version = "1.23", features = ["freestanding"] }
log = "0.4"
serde = "1"
thiserror = "2"

# Unoptimized backtrace crate has atrocious performance.
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"
