[workspace]
members = ["src/*"]
resolver = "2"

[workspace.dependencies]
bitflags = "2.9"
byteorder = "1.5"
libdeflater = { version = "1.25", features = ["freestanding"] }
log = "0.4"
serde = "1"
thiserror = "2"

# Unoptimized backtrace crate has atrocious performance.
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"

[patch.crates-io]
bitter = { git = "https://github.com/vbe0201/bitter.git" }
libdeflater = { git = "https://github.com/vbe0201/libdeflater.git" }
