[workspace]
members = ["src/*"]
resolver = "2"

[workspace.dependencies]
bitflags = "2.10"
byteorder = "1.5"
indexmap = "2"
libdeflater = { version = "1.25", features = ["freestanding"] }
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "2"

# Unoptimized backtrace crate has atrocious performance.
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"

[profile.profiling]
inherits = "release"
strip = false
debug = true

[patch.crates-io]
bitter = { git = "https://github.com/vbe0201/bitter.git" }
libdeflater = { git = "https://github.com/vbe0201/libdeflater.git" }
