[package]
name = "kobold-cli"
version = "0.3.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Kobold CLI tool for file format extraction and inspection"
license = "ISC"
repository = "https://github.com/vbe0201/kobold"
edition = "2021"

[[bin]]
name = "kobold"
path = "src/main.rs"

[dependencies]
kobold = { path = "../kobold", default-features = false, features = ["zlib-simd"] }

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crc32fast = "1.3"
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng-compat"] }
memmap2 = "0.5"
mimalloc = { version = "0.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
