[package]
name = "kobold"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Kobold core that implements all the file formats"
license = "ISC"
repository = "https://github.com/vbe0201/kobold"
edition = "2021"

[dependencies]
anyhow = "1.0"
binrw = "0.10"
bitflags = "1.3"
bitvec = "1.0"
byteorder = "1.4"
flate2 = "1.0"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
