[package]
name = "kobold-object-property"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of KingsIsle's ObjectProperty serialization"
license = "ISC"
edition = "2021"

[dependencies]
kobold-bit-buf = { path = "../kobold-bit-buf" }

anyhow = "1.0"
bitflags = { version = "2.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
