[package]
name = "kobold-types"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of the type list JSON format"
license = "ISC"
edition = "2021"

[dependencies]
kobold-utils = { path = "../kobold-utils" }

anyhow = "1.0"
bitflags = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smartstring = { version = "1.0", features = ["serde"] }
