[package]
name = "katsuba-bcd"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Crate for working with Binary Collision Data files"
license = "ISC"
edition = "2021"

[dependencies]
katsuba-utils = { path = "../katsuba-utils", features = ["binrw"] }

bitflags = { version = "2.4", features = ["serde"] }
serde = "1"
