[package]
name = "katsuba-client-sig"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Crate for working with client signature files"
license = "ISC"
edition = "2021"

[dependencies]
katsuba-utils = { path = "../katsuba-utils" }

base64 = "0.21"
byteorder = "1.4"
rand = "0.8"
rsa = { version = "0.9.2", features = ["sha1"] }
sha1 = "0.10.5"
