[package]
name = "katsuba-client-sig"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Crate for working with client signature files"
license = "ISC"
edition = "2024"

[dependencies]
katsuba-utils = { path = "../katsuba-utils" }

base64 = "0.22"
byteorder = { workspace = true }
rand = "0.8"
rsa = { version = "0.9.7", features = ["sha1"] }
sha1 = "0.10.6"
thiserror = { workspace = true }
