[package]
name = "katsuba-object-property"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of KingsIsle's ObjectProperty serialization"
license = "ISC"
edition = "2021"

[dependencies]
katsuba-bit-buf = { path = "../katsuba-bit-buf" }
katsuba-types = { path = "../katsuba-types" }
katsuba-utils = { path = "../katsuba-utils" }

bitflags = { workspace = true }
byteorder = { workspace = true }
libdeflater = { workspace = true }
log = { workspace = true }
once_cell = { version = "1.20", optional = true }
phf = { version = "0.11", features = ["macros"] }
regex = { version = "1.11", optional = true }
serde = { workspace = true, optional = true }
smartstring = "1.0"
thiserror = { workspace = true }

[features]
default = []

option-guessing = ["once_cell", "regex"]
