[package]
name = "katsuba-object-property"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of KingsIsle's ObjectProperty serialization"
license = "ISC"
edition = "2024"

[dependencies]
katsuba-types = { path = "../katsuba-types" }
katsuba-utils = { path = "../katsuba-utils" }

bitflags = { workspace = true }
bitter = "0.8"
byteorder = { workspace = true }
libdeflater = { workspace = true }
log = { workspace = true }
phf = { version = "0.13", features = ["macros"] }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
