[package]
name = "katsuba-py"
version = "0.1.1"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Python language bindings to Katsuba libraries"
license = "ISC"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
katsuba-object-property = { path = "../katsuba-object-property" }
katsuba-types = { path = "../katsuba-types" }
katsuba-utils = { path = "../katsuba-utils" }
katsuba-wad = { path = "../katsuba-wad" }

pyo3 = { version = "0.19", features = ["abi3-py310", "extension-module"] }
