[package]
name = "katsuba-py"
version = "0.2.1"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Python language bindings to Katsuba libraries"
license = "ISC"
edition = "2021"

[lib]
name = "katsuba"
crate-type = ["cdylib"]

[dependencies]
katsuba-object-property = { path = "../katsuba-object-property" }
katsuba-types = { path = "../katsuba-types" }
katsuba-utils = { path = "../katsuba-utils" }
katsuba-wad = { path = "../katsuba-wad" }

pyo3 = { version = "0.23", features = ["abi3-py310"] }

[build-dependencies]
pyo3-build-config = { version = "0.23" }
