[package]
name = "katsuba-py"
version = "0.2.2"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Python language bindings to Katsuba libraries"
license = "ISC"
edition = "2024"

[lib]
name = "katsuba"
crate-type = ["cdylib"]

[dependencies]
katsuba-object-property = { path = "../katsuba-object-property" }
katsuba-types = { path = "../katsuba-types" }
katsuba-utils = { path = "../katsuba-utils" }
katsuba-wad = { path = "../katsuba-wad" }

bytemuck = "1"
pyo3 = { version = "0.28", features = ["abi3-py311"] }

[build-dependencies]
pyo3-build-config = { version = "0.28" }
