[package]
name = "katsuba-types"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of the type list JSON format"
license = "ISC"
edition = "2024"

[dependencies]
katsuba-utils = { path = "../katsuba-utils" }

bitflags = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = "1"
thiserror = { workspace = true }
