[package]
name = "katsuba-utils"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Utility code shared throughout the Katsuba project"
license = "ISC"
edition = "2021"

[dependencies]
binrw = { version = "0.13", optional = true }
libdeflater = { version = "1.19", optional = true, features = ["freestanding"] }
thiserror = "1.0"
