[package]
name = "katsuba-utils"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Utility code shared throughout the Katsuba project"
license = "ISC"
edition = "2021"

[dependencies]
binrw = { workspace = true, optional = true }

[features]
binrw-ext = ["binrw"]
