[package]
name = "katsuba-wad"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Library for working with KIWAD archives"
license = "ISC"
edition = "2021"

[dependencies]
katsuba-utils = { path = "../katsuba-utils", features = [
    "binrw",
    "libdeflater",
] }

crc32fast = "1.3"
globset = "0.4"
memmap2 = "0.7"
