[package]
name = "katsuba-wad"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Library for working with KIWAD archives"
license = "ISC"
edition = "2021"

[dependencies]
katsuba-utils = { path = "../katsuba-utils", features = ["binrw-ext"] }

binrw = { workspace = true }
crc32fast = "1.4"
globset = "0.4"
libdeflater = { workspace = true }
memmap2 = "0.9"
tempfile = { version = "3.17", optional = true }
thiserror = { workspace = true }

[features]
default = ["builder"]

builder = ["tempfile"]
