[package]
name = "katsuba"
version = "0.8.3"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "CLI tool for working with KingsIsle formats"
license = "ISC"
edition = "2021"

[dependencies.katsuba-object-property]
path = "../katsuba-object-property"
features = ["option-guessing", "serde"]

[dependencies]
katsuba-bcd = { path = "../katsuba-bcd" }
katsuba-client-sig = { path = "../katsuba-client-sig" }
katsuba-executor = { path = "../katsuba-executor" }
katsuba-nav = { path = "../katsuba-nav" }
katsuba-poi = { path = "../katsuba-poi" }
katsuba-types = { path = "../katsuba-types" }
katsuba-utils = { path = "../katsuba-utils" }
katsuba-wad = { path = "../katsuba-wad" }

clap = { version = "4.4", features = ["derive", "env"] }
color-eyre = { version = "0.6", default-features = false }
enum-map = "2.6"
eyre = "0.6"
glob = "0.3"
log = "0.4"
mimalloc = "*"
serde = "1"
serde_json = "1"
sharded-slab = "0.1"
threadpool = "1.8"
walkdir = "2"

[dependencies.simple_logger]
version = "4.2"
default-features = false
features = ["colors"]
