[package]
name = "katsuba"
version = "0.8.6"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "CLI tool for working with KingsIsle formats"
license = "ISC"
edition = "2024"

[dependencies.katsuba-object-property]
path = "../katsuba-object-property"
features = ["serde"]

[dependencies]
katsuba-bcd = { path = "../katsuba-bcd" }
katsuba-client-sig = { path = "../katsuba-client-sig" }
katsuba-nav = { path = "../katsuba-nav" }
katsuba-poi = { path = "../katsuba-poi" }
katsuba-types = { path = "../katsuba-types" }
katsuba-utils = { path = "../katsuba-utils" }
katsuba-wad = { path = "../katsuba-wad" }

clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = { version = "0.6", default-features = false }
enum-map = "2.7"
eyre = "0.6"
glob = "0.3"
log = { workspace = true }
mimalloc = { version = "*", features = ["v3"] }
rayon = "1.11"
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
blocking = "1.6"

[dependencies.simple_logger]
version = "5.0"
default-features = false
features = ["colors"]
