[package]
name = "kobold-bcd"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Crate for working with Binary Collision Data files"
license = "ISC"
edition = "2021"

[dependencies]
kobold-utils = { path = "../kobold-utils", features = ["binrw"] }

bitflags = { version = "2.4", features = ["serde"] }
serde = "1"
