[package]
name = "kobold-object-property"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of KingsIsle's ObjectProperty serialization"
license = "ISC"
edition = "2021"

[dependencies]
kobold-bit-buf = { path = "../kobold-bit-buf" }
kobold-types = { path = "../kobold-types" }
kobold-utils = { path = "../kobold-utils" }

anyhow = "1.0"
bitflags = "2.3"
byteorder = "1.4"
libdeflater = { version = "0.14", features = ["freestanding"] }
phf = { version = "0.11", features = ["macros"] }
smartstring = "1.0"
