[package]
name = "kobold-object-property"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of KingsIsle's ObjectProperty serialization"
license = "ISC"
edition = "2021"

[dependencies]
kobold-bit-buf = { path = "../kobold-bit-buf" }
kobold-types = { path = "../kobold-types" }
kobold-utils = { path = "../kobold-utils" }

bitflags = "2.3"
byteorder = "1.4"
phf = { version = "0.11", features = ["macros"] }
smartstring = "1.0"
