[package]
name = "kobold-object-property"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of KingsIsle's ObjectProperty serialization"
license = "ISC"
edition = "2021"

[dependencies]
kobold-bit-buf = { path = "../kobold-bit-buf" }
kobold-types = { path = "../kobold-types" }
kobold-utils = { path = "../kobold-utils", features = ["libdeflater"] }

bitflags = "2.4"
byteorder = "1.4"
once_cell = { version = "1.18", optional = true }
phf = { version = "0.11", features = ["macros"] }
regex = { version = "1.9", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
smartstring = "1.0"

[features]
default = []

enable-option-guessing = ["once_cell", "regex"]
