[package]
name = "kobold-py"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Python language bindings to Kobold libraries"
license = "ISC"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
kobold-object-property = { path = "../kobold-object-property" }
kobold-types = { path = "../kobold-types" }
kobold-utils = { path = "../kobold-utils" }
kobold-wad = { path = "../kobold-wad" }

pyo3 = { version = "0.19", features = ["abi3-py310", "extension-module"] }
