[package]
name = "kobold-utils"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Utility code shared throughout the Kobold project"
license = "ISC"
edition = "2021"

[dependencies]
anyhow = "1.0"
binrw = "0.11"
libdeflater = { version = "0.14", features = ["freestanding"] }
