[package]
name = "kobold-wad"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Library for working with KIWAD archives"
license = "ISC"
edition = "2021"

[dependencies]
kobold-utils = { path = "../kobold-utils" }

binrw = "0.11"
crc32fast = "1.3"
libdeflater = { version = "0.14", features = ["freestanding"] }
memmap2 = "0.7"
