[package]
name = "kobold"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
edition = "2021"

[dependencies]
kobold-client-sig = { path = "../kobold-client-sig" }
kobold-object-property = { path = "../kobold-object-property" }
kobold-types = { path = "../kobold-types" }
kobold-utils = { path = "../kobold-utils" }
kobold-wad = { path = "../kobold-wad" }

clap = { version = "4.3", features = ["derive"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.5"
