[package]
name = "kobold"
version = "0.6.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "CLI tool for working with KingsIsle formats"
license = "ISC"
edition = "2021"

[dependencies.kobold-object-property]
path = "../kobold-object-property"
features = ["enable-option-guessing", "serde"]

[dependencies]
kobold-bcd = { path = "../kobold-bcd" }
kobold-client-sig = { path = "../kobold-client-sig" }
kobold-nav = { path = "../kobold-nav" }
kobold-poi = { path = "../kobold-poi" }
kobold-types = { path = "../kobold-types" }
kobold-utils = { path = "../kobold-utils" }
kobold-wad = { path = "../kobold-wad" }

clap = { version = "4.4", features = ["derive", "env"] }
enum-map = "2.6"
eyre = "0.6"
glob = "0.3"
log = "0.4"
mimalloc = "*"
serde = "1"
serde_json = "1"
sharded-slab = "0.1"
threadpool = "1.8"

[dependencies.simple_logger]
version = "4.2"
default-features = false
features = ["colors"]
